<resources>
    <string name="app_name">WongLhao</string>
    <string name="noAccount">Don\'t have an account ? Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="wrongUserPass">Wrong username or password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="promotion">Promotions</string>
    <string name="pubBar">Pubs \u0026 Bars</string>
    <string name="search">Search</string>
    <string name="nearBy">Near by</string>
    <string name="peopleWereHere">people were here</string>
    <string name="reviews">Reviews</string>
    <string name="pleaseWait">Please wait</string>
    <string name="pubBarName">Pubs \u0026 Bars name</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="map">Map</string>
    <string name="GoogleAPIKey">AIzaSyAu9xPEOPwQ65pBDM72MQUEOwz9PggZZ3s</string>
    <string name="checkIn">Check In</string>
    <string name="whoHere">Who\'s here</string>
    <string name="checkInDialog">Do you want to check in @</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="signout">Sign out</string>
    <string name="star">Star</string>
    <string name="review">Review</string>
</resources>
