<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.taweesoft.wonglhao.ui.views.LoginActivity"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/logoSizeBig"
            android:layout_height="@dimen/logoSizeBig"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:textAllCaps="true"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/containerMargin"
        android:layout_marginRight="@dimen/containerMargin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/itemMargin"
            android:singleLine="true"
            android:password="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:text="@string/signin"
            android:id="@+id/btnSignin"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/itemMargin" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/itemMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:id="@+id/textView2"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
