<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.taweesoft.wonglhao.ui.views.SignupActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="@dimen/logoSizeNormal"
        android:layout_height="@dimen/logoSizeNormal"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/itemMargin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/containerMargin"
        android:layout_marginRight="@dimen/containerMargin"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/itemMargin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:password="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etConfirmPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirmPassword"
            android:password="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etFirstname"
            android:layout_gravity="center_horizontal"
            android:hint="@string/firstname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLastname"
            android:layout_gravity="center_horizontal"
            android:hint="@string/lastname" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:id="@+id/rbMale"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/rbFemale"
                android:layout_weight="1"
                android:checked="false" />
        </LinearLayout>

        <Button
            android:layout_width="@dimen/authButtonNormalSize"
            android:layout_height="@dimen/authButtonNormalSize"
            android:id="@+id/btnSignup"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/check_circle_yellow"
            android:layout_above="@+id/btnSignup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/itemMargin" />
    </LinearLayout>

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/btnBack"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_marginTop="@dimen/itemMargin"
        android:layout_marginLeft="@dimen/itemMargin" />

</RelativeLayout>
