<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.taweesoft.wonglhao.ui.views.BarActivity"
    android:background="@color/colorPrimaryDark">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imgBar" />

                <Button
                    android:layout_width="@dimen/backBtnSize"
                    android:layout_height="@dimen/backBtnSize"
                    android:id="@+id/btnBack"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:layout_margin="@dimen/itemMargin" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/containerMargin"
                android:layout_marginRight="@dimen/containerMargin"
                android:layout_marginTop="@dimen/itemMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zone Rangsit"
                    android:id="@+id/tvBarName"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:alpha="0.15"
                    android:background="@color/colorPrimary"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="@dimen/itemMargin">

                    <RatingBar
                        android:isIndicator="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/sunFlower"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="0.5"
                        android:id="@+id/ratingBar"
                        android:contextClickable="false"
                        android:focusable="false"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(10)"
                        android:id="@+id/tvRate"
                        android:textColor="@color/sunFlower" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:id="@+id/textView3"
                    android:layout_marginTop="@dimen/itemMargin"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Night club"
                    android:id="@+id/tvType"
                    android:layout_marginLeft="@dimen/itemMargin"
                    android:layout_marginTop="@dimen/itemMarginSmall"
                    android:textColor="@color/colorBaseDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/textView5"
                    android:layout_marginTop="@dimen/itemMargin"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="The greatest night club ever"
                    android:id="@+id/tvDescription"
                    android:layout_marginLeft="@dimen/itemMargin"
                    android:layout_marginTop="@dimen/itemMarginSmall"
                    android:textColor="@color/colorBaseDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:id="@+id/textView4"
                    android:layout_marginTop="@dimen/itemMargin"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
